# flask-mongo-drf

./: .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  PYPI_RELEASE_GUIDE.md  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
docs/: aggregation.rst  changelog.rst  conf.py  contributing.rst  custom_serializers.rst  error_handling.rst  filters.rst  getting_started.rst  index.rst  installation.rst  models.rst  multi_database.rst  pagination.rst  quick_start.rst  requirements.txt  routing.rst  serializers.rst  testing.rst  viewsets.rst
docs/api/: flask_mongo_drf.contrib.rst  flask_mongo_drf.rst  modules.rst
examples/: README.md  app.py
examples/config/: settings.py
examples/monitor/: app.py  filters.py  models.py  paginations.py  serializers.py  views.py
flask_mongo_drf/: __init__.py  mongo_decorators.py  mongo_exceptions.py  mongo_filters.py  mongo_models.py  mongo_responses.py  mongo_swagger.py
flask_mongo_drf/contrib/: __init__.py  mongodb_manager.py
flask_mongo_rest/: mongo_paginations.py  mongo_serializers.py  mongo_viewsets.py
flask_mongo_rest/contrib/: mongodb_manager.py
tests/: conftest.py  test_filters.py  test_models.py  test_mongodb_manager.py  test_pagination.py  test_serializers.py  test_viewsets.py
