[build-system]
requires = ["setuptools>=62", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flask-mongo-rest"
version = "1.0.0"
description = "Industrial Flask framework for building RESTful APIs with MongoDB"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [
    {name = "wangyunkai", email = "yunkaiwang0901@gmail.com"},
]
keywords = ["flask", "mongodb", "rest", "api", "swagger", "openapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Framework :: Flask",
]
dependencies = [
    "flask>=2.0.0",
    "pymongo>=4.0.0",
    "flasgger>=0.9.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.10",
    "black>=21.0",
    "flake8>=3.9",
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
]

[project.urls]
Homepage = "https://github.com/BioDataMiner/flask-mongo-rest"
Documentation = "https://flask-mongo-rest.readthedocs.io"
Repository = "https://github.com/BioDataMiner/flask-mongo-rest.git"
"Bug Tracker" = "https://github.com/BioDataMiner/flask-mongo-rest/issues"

[tool.black]
line-length = 100
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=flask_mongo_rest --cov-report=html --cov-report=term-missing"

[tool.coverage.run]
source = ["flask_mongo_rest"]
omit = ["*/tests/*", "*/site-packages/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
